MODON MRE BPDEV/force-app/main/default/objects/OffersPromotions__c/OffersPromotions__c.object-meta.xml
<CustomObject>
    <description>Object to manage all the Offers &amp; Promotions associated with a Project and/or that can be used for a booking.</description>
    <label>Offer &amp; Promotion</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Offer Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offers &amp; Promotions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>