MODON MRE BPDEV/force-app/main/default/objects/OffersPromotions__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>Duration till when the offer has to be active.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Duration till when the offer has to be active.</inlineHelpText>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>