MODON MRE BPDEV/force-app/main/default/objects/OffersPromotions__c/fields/ExtendOffer__c.field-meta.xml
<CustomField>
    <fullName>ExtendOffer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this field if the offer should be active even after it&apos;s end dated.</description>
    <inlineHelpText>Check this field if the offer should be active even after it&apos;s end dated.</inlineHelpText>
    <label>Extend Offer ?</label>
    <type>Checkbox</type>
</CustomField>