MODON MRE BPDEV/force-app/main/default/objects/OffersPromotions__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <formula>IF(EndDate__c &gt;= Today() &amp;&amp; StartDate__c &lt;=Today(), true, ExtendOffer__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Active?</label>
    <type>Checkbox</type>
</CustomField>