MODON MRE BPDEV/force-app/main/default/objects/OffersPromotions__c/fields/Offer_Expiry_Notification__c.field-meta.xml
<CustomField>
    <fullName>Offer_Expiry_Notification__c</fullName>
    <formula>IF( AND((TODAY()-EndDate__c) &lt;= 3, (TODAY()-EndDate__c) != 0 ),true,false)</formula>
    <label>Offer Expiry Notification</label>
    <type>Checkbox</type>
</CustomField>