MODON MRE BPDEV/force-app/main/default/objects/OffersPromotions__c/fields/Offer_Expiry_Remaining_Days__c.field-meta.xml
<CustomField>
    <fullName>Offer_Expiry_Remaining_Days__c</fullName>
    <formula>IF((EndDate__c - Today()) &gt; 0, EndDate__c - Today(), 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offer Expiry Remaining Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>