MODON MRE BPDEV/force-app/main/default/objects/OffersPromotions__c/fields/OfferDescription__c.field-meta.xml
<CustomField>
    <fullName>OfferDescription__c</fullName>
    <description>Provide detailed description of the offer &amp; promotion</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Provide detailed description of the offer &amp; promotion</inlineHelpText>
    <label>Offer Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>