MODON MRE BPDEV/force-app/main/default/objects/OffersPromotions__c/fields/OfferName__c.field-meta.xml
<CustomField>
    <fullName>OfferName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Offer Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>