MODON MRE BPDEV/force-app/main/default/objects/OffersPromotions__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Project for which the promotion is applied. All the offers have to be associated with a project.</description>
    <inlineHelpText>Project for which the promotion is applied. All the offers have to be associated with a project.</inlineHelpText>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Offers &amp; Promotions</relationshipLabel>
    <relationshipName>OffersPromotionsProject</relationshipName>
    <type>Lookup</type>
</CustomField>