MODON MRE BPDEV/force-app/main/default/objects/OffersPromotions__c/fields/SalesEventCampaignName__c.field-meta.xml
<CustomField>
    <fullName>SalesEventCampaignName__c</fullName>
    <description>Sales Event/Campaign Name used in Marketing communication.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Sales Event/Campaign Name used in Marketing communication.</inlineHelpText>
    <label>Sales Event/Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>