MODON MRE BPDEV/force-app/main/default/objects/OffersPromotions__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Duration from when the offer has to be active.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Duration from when the offer has to be active.</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>