MODON MRE BPDEV/force-app/main/default/objects/OffersPromotions__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Unit for which the offer is applied along with Booking Memo. Unit is considered only for Memo offers.</description>
    <inlineHelpText>Unit for which the offer is applied along with Booking Memo.</inlineHelpText>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Offers &amp; Promotions</relationshipLabel>
    <relationshipName>OffersPromotions</relationshipName>
    <type>Lookup</type>
</CustomField>