MODON MRE BPDEV/force-app/main/default/objects/OffersPromotions__c/validationRules/DatesValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>DatesValidation</fullName>
    <active>false</active>
    <description>For validating that the start date is before end date</description>
    <errorConditionFormula>StartDate__c &gt; EndDate__c</errorConditionFormula>
    <errorDisplayField>StartDate__c</errorDisplayField>
    <errorMessage>Please provide start date before the end date of the Offer &amp; Promotion.</errorMessage>
</ValidationRule>