MODON MRE BPDEV/force-app/main/default/objects/OffersPromotions__c/validationRules/Freeze_Approved_Offers.validationRule-meta.xml
<ValidationRule>
    <fullName>Freeze_Approved_Offers</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISCHANGED( LastModifiedDate ), ISPICKVAL(Approval_Status__c,&apos;Approved&apos;), NOT($Permission.OfferModifyPermission ))</errorConditionFormula>
    <errorMessage>Cannot modify the approved offers in the system!</errorMessage>
</ValidationRule>