MODON MRE BPDEV/force-app/main/default/objects/OffersPromotions__c/validationRules/Offer_Starting_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Offer_Starting_Date_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>StartDate__c &lt; Today()</errorConditionFormula>
    <errorMessage>Offer start date should not be in past !</errorMessage>
</ValidationRule>